@@ -1,6 +1,5 @@
 package src.test.java;
 
-import java.util.Arrays;
 import java.util.List;
 import src.main.java.org.classes.ProductBacklog;
 import src.main.java.org.classes.UserStory;
@@ -21,7 +20,7 @@ public class ProductBacklogTests implements ITest{
 
         //adding user stories to product backlog
         productBacklog.addUserStory(userStory1);
-        List<UserStory> userStories = Arrays.asList(userStory2, userStory3);
+        List<UserStory> userStories = List.of(userStory2, userStory3);
         productBacklog.addUserStory(userStories);
 
         //testing getters
